--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -8,19 +8,19 @@ html, body {
   .home-container {
     display: flex;
     flex-direction: column; 
-    align-items: center;  /* Center horizontally */
+    align-items: center;  
     justify-content: flex-start;  
     height: 100vh; 
     text-align: center;
     padding-top: 20px;  
-    overflow: hidden;  /* Prevent overflow */
+    overflow: hidden;  
   }
   
   .welcome-text {
     display: flex;  
-    flex-direction: row; /* Align text horizontally */
+    flex-direction: row;
     gap: 10px; 
-    align-items: center; /* Align vertically in the center */
+    align-items: center; 
     margin-bottom: 300px;
   }
   
@@ -31,25 +31,25 @@ html, body {
   
   .virtual-office {
     font-size: 3rem;
-    color: #ffa200;  /* Virtual Office text color */
+    color: #ffa200;  
     font-weight: bold;
   }
   
   .cta-buttons {
     display: flex;
-    flex-direction: row;  /* Align buttons horizontally */
+    flex-direction: row;  
     gap: 20px;  
   }
   
   .instant-demo {
-    background-color: #ffa200;  /* Background color */
-    color: white;  /* Text color */
+    background-color: #ffa200; 
+    color: white;  
     border: none;
     padding: 15px 30px;
     font-size: 1.2rem;
     border-radius: 4px;
     cursor: pointer;
-    width: 250px;  /* Fixed width */
+    width: 250px;  
   }
   
   .instant-demo:hover {
@@ -58,17 +58,17 @@ html, body {
   
   .setup-company {
     background-color: transparent;
-    border: 2px solid #ffa200;  /* Border color */
+    border: 2px solid #ffa200; 
     color: #ffa200; 
     padding: 15px 30px;
     font-size: 1.2rem;
     border-radius: 4px;
     cursor: pointer;
-    width: 250px;  /* Fixed width */
+    width: 250px; 
   }
   
   .setup-company:hover {
     background-color: #ffa200;  
-    color: white;  /* Change text color on hover */
+    color: white;  
   }
   
