--- a/src/components/sign-up/SignUp.module.css
+++ b/src/components/sign-up/SignUp.module.css
@@ -1,4 +1,3 @@
-/* Container for the form */
 .formContainer {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 30px;
@@ -18,11 +17,10 @@
 
 body, html {
   overflow: hidden;  
-  height: 100%;  /* Ensure the body takes up the full height */
+  height: 100%;  
 }
 
 
-/* Header */
 .header {
   font-size: 2rem;
   font-weight: 700;
@@ -31,7 +29,6 @@ body, html {
   color: black;
 }
 
-/* Circular image placeholder */
 .imageContainer {
   text-align: center;
   margin-bottom: 20px;
@@ -50,25 +47,21 @@ body, html {
   margin: 0 auto;
 }
 
-/* Input fields container */
 .inputContainer {
   margin-bottom: 20px;
   color: black;
 }
 
-/* Label style */
 label {
   color: black;
   font-size: 0.9rem;
   color: #333;
 }
 
-/* Required asterisk */
 .required {
   color: red;
 }
 
-/* Input field */
 .inputField {
   width: 100%;
   padding: 10px;
@@ -84,7 +77,6 @@ label {
   outline: none;
 }
 
-/* Continue button */
 .continueButton {
   width: 100%;
   padding: 12px;
